# feature-engineering-az

./: .Rbuildignore  .Renviron  .Rprofile  .gitignore  404.qmd  AGENTS.md  DESCRIPTION  Periodic-indicators.qmd  Periodic-splines.qmd  Periodic-trig.qmd  Periodic.qmd  README.md  _progress.R  _quarto.yml  categorical-binary.qmd  categorical-catboost.qmd  categorical-cleaning.qmd  categorical-collapse.qmd  categorical-combination.qmd  categorical-difference.qmd  categorical-dummy.qmd  categorical-frequency.qmd  categorical-glmm.qmd  categorical-hashing.qmd  categorical-helmert.qmd  categorical-impact.qmd  categorical-jamesstein.qmd  categorical-label.qmd  categorical-leaf.qmd  categorical-leaveoneout.qmd  categorical-mestimator.qmd  categorical-multi-dummy.qmd  categorical-ordinal.qmd  categorical-polynomial.qmd  categorical-quantile.qmd  categorical-randomforest.qmd  categorical-sum.qmd  categorical-summary.qmd  categorical-summary.quarto_ipynb  categorical-target.qmd  (+155 more)
.claude/: settings.local.json
_book/: 404.html  Feature-Engineering-A-Z.epub  categorical-binary.html  categorical-catboost.html  categorical-cleaning.html  categorical-collapse.html  categorical-combination.html  categorical-difference.html  categorical-dummy.html  categorical-frequency.html  categorical-glmm.html  categorical-hashing.html  categorical-helmert.html  categorical-impact.html  categorical-jamesstein.html  categorical-label.html  categorical-leaf.html  categorical-leaveoneout.html  categorical-mestimator.html  categorical-multi-dummy.html  categorical-ordinal.html  categorical-polynomial.html  (+159 more)
(+29 files in other folders)
