[tool.poetry]
name = "feature-engineering-az"
version = "0.1.0"
description = ""
authors = ["Emil Hvitfeldt <emilhhvitfeldt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.3.2"
feazdata = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
